--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -62,6 +62,7 @@
     <color name="menu_black_pressed">#97918D</color>
     <color name="new_orange_path">#F8A654</color>
 
+    <color name="black_varient">#979797</color>
 
     <color name="blue_dark_btn">#3B5999</color>
     <color name="blue_dark_btn_pressed">#1B3979</color>
