feature_self_audit: UI and logic modified

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_non_jugnoo_audit_branding.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_non_jugnoo_audit_branding.xml
@@ -180,6 +180,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayoutNJBOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="60px"
