feature_self_audit: new popups and api created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_audit_submission.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_audit_submission.xml
@@ -133,6 +133,7 @@
         </RelativeLayout>
 
         <RelativeLayout
+            android:id="@+id/relativeLayoutVehicleNo"
             android:layout_width="630px"
             android:layout_height="117px"
             android:gravity="center_vertical">
