--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
@@ -12,6 +12,14 @@
         android:background="@color/menu_black"
         android:splitMotionEvents="false">
 
+        <Button
+            android:id="@+id/backBtn"
+            android:layout_width="82px"
+            android:layout_height="82px"
+            android:layout_centerVertical="true"
+            android:background="@drawable/back_btn_selector"
+            android:tag="mwar" />
+
 
         <RelativeLayout
             android:id="@+id/relativeLayoutProgressBar"
