--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -50,6 +50,8 @@
     <color name="blue_btn">#4CC1D2</color>
     <color name="blue_btn_pressed">#2CA1B2</color>
     <color name="blue_btn_alpha">#774CC1D2</color>
+
+    <color name="status_yellow">#FF9C5A</color>
     
     <color name="green_btn">#66BB66</color>
     <color name="green_btn_pressed">#669966</color>
