feature_self_audit: back functionality completed and ui fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_audit_submission.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_audit_submission.xml
@@ -155,8 +155,8 @@
                 android:layout_toRightOf="@+id/imageViewVehicle"
                 android:background="@drawable/transparent"
                 android:hint="@string/vehicle_number"
-                android:inputType="number"
-                android:maxLength="10"
+                android:maxLength="15"
+                android:capitalize="characters"
                 android:paddingLeft="4px"
                 android:paddingRight="20px"
                 android:singleLine="true"
