--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
@@ -231,6 +231,19 @@
                 android:background="@drawable/click_picture"
                 android:visibility="visible"/>
 
+            <Button
+                android:id="@+id/buttonSkip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25px"
+                android:layout_marginRight="50px"
+                android:text="@string/skip"
+                android:textSize="40px"
+                android:background="@color/black"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                android:layout_alignParentRight="true"/>
+
             <RelativeLayout
                 android:id="@+id/relativeLayoutConfirmImage"
                 android:layout_width="match_parent"
