--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_select_audit.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_select_audit.xml
@@ -89,6 +89,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:visibility="gone"
         android:layout_marginTop="52px"
         android:orientation="vertical">
 
@@ -139,6 +140,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:visibility="gone"
         android:layout_marginTop="52px"
         android:orientation="vertical">
 
