--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_self_audit_custom_camera.xml
@@ -229,7 +229,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:background="@drawable/click_picture"
-                android:visibility="visible"/>
+                android:visibility="gone"/>
 
             <Button
                 android:id="@+id/buttonSkip"
@@ -248,7 +248,7 @@
                 android:id="@+id/relativeLayoutConfirmImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone">
+                android:visibility="visible">
 
             <ImageView
                 android:layout_width="2px"
@@ -261,21 +261,19 @@
 
             <Button
                 android:id="@+id/rejectImage"
-                android:layout_width="41px"
-                android:layout_height="41px"
+                android:layout_width="350px"
+                android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="148px"
                 android:background="@drawable/self_audit_cross"
                 android:visibility="visible"/>
 
             <Button
                 android:id="@+id/acceptImage"
-                android:layout_width="41px"
-                android:layout_height="41px"
+                android:layout_width="350px"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_marginRight="148px"
                 android:background="@drawable/self_audit_tick"
                 android:visibility="visible"/>
 
